implement SearchMovie API Endpoint
